--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -7,7 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+<style>
+    body {
+        background-color: #D4E5EF;
+        color: #FFFFFF;
+    }
+    div {
+        text-align: center;
+        background-color: #A3BBDB;
+    }
+</style>
 <body>
-
+<div>
+    <h1>测试页面</h1>
+</div>
 </body>
 </html>
