--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -11,34 +11,15 @@
     />
     <title>Document</title>
 </head>
+
+<!-- import layui -->
 <link href="js/layui/css/layui.css" rel="stylesheet">
-<script src="js/vue.global.min.js"></script>
 <script src="js/layui/layui.js"></script>
-<style>
-    body,html {
-        background-color: #D4E5EF;
-        color: #FFFFFF;
-        width: 100%;
-        height: 100%;
-    }
-    div {
-        text-align: center;
-        background-color: #A3BBDB;
-    }
-    #daily-map-note-container {
-        height: 100%;
-        width: 100%;
-    }
-    #daily-map-note {
-        width: 100%;
-        height: 100%;
-    }
-</style>
-<body>
-<div id="daily-map-note-container">
-    <div id="daily-map-note"></div>
-</div>
-</body>
+<!-- import vue -->
+<script src="js/vue.global.min.js"></script>
+
+
+<link href="css/map_ui.css" rel="stylesheet">
 <script>
     window._AMapSecurityConfig = {
         securityJsCode: "9a4f884d658d320664e9222d6f68ac6c",
@@ -56,30 +37,49 @@
         util = layui.util;
         $ = layui.$;
     });
-</script>
-<script type="text/javascript" src="https://webapi.amap.com/maps?v=2.0&key=bc78c2056a3b76a5a6ceab5333cb6562"></script>
-<script>
-    var gps_position=JSON.parse(window.GPSp.getPositions());
-    // window.GPSp.debug(""+ typeof +","+);
-    // 119.494741,29.178387
-    // 创建地图实例
-    var map = new AMap.Map("daily-map-note", {
-        zoom: 17,
-        center: [119.494741, 29.178387],
-        resizeEnable: true
-    });
-    var liter_level=5;
-    for (let i = 0; i < gps_position.length; i+=liter_level) {
-        map.add( new AMap.Circle({
-            center: new AMap.LngLat(gps_position[i]["lng"],gps_position[i]["lat"]), // 圆心位置
-            radius: 1,  //半径
-            strokeColor: "#A3BBDB",  //线颜色
-            strokeOpacity: 1,  //线透明度
-            strokeWeight: 1,  //线粗细度
-            fillColor: "#A3BBDB",  //填充颜色
-            fillOpacity: 0.35 //填充透明度
-        }));
+
+    let window_width = ref(window.width);
+    let window_height = ref(window.height);
+    let menu_status = ref(false);
+
+    function show_menu_button(menu_button,menu_bar){
+        menu_button.removeClass('layui-anim-fadein');
+        menu_bar.removeClass('layui-anim-fadeout');
+        //删除菜单按钮 显示菜单栏
+        menu_button.addClass('layui-anim-fadeout');
+        menu_bar.addClass('layui-anim-fadein');
     }
-    map.setFitView();
+    function  hide_menu_button(menu_button,menu_bar){
+        //删除菜单栏 显示菜单按钮
+        menu_button.removeClass('layui-anim-fadeout');
+        menu_bar.removeClass('layui-anim-fadein');
+        menu_button.addClass('layui-anim-fadein');
+        menu_bar.addClass('layui-anim-fadeout');
+    }
+
 </script>
+<body>
+<div id="daily-map-note-container">
+    <div id="daily-map-note" @click="menu_show(1);"></div>
+    <div id="daily-map-note-menu" class="layui-anim layui-panel">
+        <ul class="layui-menu" >
+            <li lay-options="{id: 100}">
+                <div class="layui-menu-body-title"><a href="javascript:;">日期选择</a></div>
+            </li>
+            <li lay-options="{id: 200}">
+                <div class="layui-menu-body-title"><a href="javascript:;">时间选择</a></div>
+            </li>
+            <li lay-options="{id: 300}">
+                <div class="layui-menu-body-title"><a href="javascript:;">高度选择</a></div>
+            </li>
+        </ul>
+    </div>
+    <div class="layui-anim" id="daily-map-note-menu-button" @click="menu_show(2);">
+        <i class="layui-icon layui-icon-shrink-right" style="font-size: 20px; color: #ffffff;"></i>
+    </div>
+</div>
+</body>
+<script type="text/javascript" src="js/menu_mount_control.js"></script>
+<script type="text/javascript" src="https://webapi.amap.com/maps?v=2.0&key=bc78c2056a3b76a5a6ceab5333cb6562"></script>
+<script type="text/javascript" src="js/map_control.js"></script>
 </html>
